# UCV-SI-lab8

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
agente_ucv/.adk/: session.db
laboratorio-adk-ucv/agente_ucv/: agent.py
laboratorio-adk-ucv/agente_ucv/.adk/: session.db
laboratorio-adk-ucv/tests/: test_agent.py
