[project]
name = "laboratorio-adk-ucv"
version = "0.1.0"
description = ""
authors = [
    {name = "joshiel123",email = "josiasney123@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "google-adk (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=8.0.0)"
]


[tool.poetry]
packages = [
    { include = "agente_ucv", from = "laboratorio-adk-ucv" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
